contrib/openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    net.pflaeging.route: chat-stickiebox-synapse
  name: chat-stickiebox-synapse
spec:
  host: chat.server.name.tld
  port:
    targetPort: 8008-tcp
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      insert ca_certificate here
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      insert certificate here
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      insert private key here
      -----END RSA PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: chat-stickiebox-synapse
    weight: 100
  wildcardPolicy: None
status: {}
